force-app/main/default/objects/Appointment__c/fields/Appointment_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Appointment_DateTime__c</fullName>
    <description>Combined date/time in UTC (formula or set by integration)</description>
    <label>Appointment DateTime</label>
    <type>DateTime</type>
</CustomField>