force-app/main/default/objects/Appointment__c/fields/Appointment_Type__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Type__c</fullName>
    <label>Appointment Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>