force-app/main/default/objects/Appointment__c/fields/Cancellation_Detail__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Detail__c</fullName>
    <label>Cancellation Detail</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>