force-app/main/default/objects/Appointment__c/fields/Confirmation_Number__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Number__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Confirmation number from the scheduling API</description>
    <externalId>true</externalId>
    <label>Confirmation Number</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>