force-app/main/default/objects/Appointment__c/fields/Created_By_Integration__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if the record was created by the API sync (vs. manually)</description>
    <label>Created By Integration</label>
    <type>Checkbox</type>
</CustomField>