force-app/main/default/objects/Appointment__c/fields/Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Duration_Minutes__c</fullName>
    <description>Expected duration</description>
    <label>Duration Minutes</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>