force-app/main/default/objects/Appointment__c/fields/External_Appointment_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Appointment_Id__c</fullName>
    <description>Optional secondary ID from the scheduling API</description>
    <externalId>true</externalId>
    <label>External Appointment Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>