force-app/main/default/objects/Appointment__c/fields/Lab_Order__c.field-meta.xml
<CustomField>
    <fullName>Lab_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lab Order</label>
    <referenceTo>Lab_Order__c</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>AppointmentLabOrders</relationshipName>
    <type>Lookup</type>
</CustomField>