force-app/main/default/objects/Appointment__c/fields/Lab_Order_Name__c.field-meta.xml
<CustomField>
    <fullName>Lab_Order_Name__c</fullName>
    <label>Lab Order Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>