force-app/main/default/objects/Appointment__c/fields/Location_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Location_Address_Line_1__c</fullName>
    <label>Location Address Line 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>