force-app/main/default/objects/Appointment__c/fields/Location_Id__c.field-meta.xml
<CustomField>
    <fullName>Location_Id__c</fullName>
    <description>Location ID from the scheduling API (external system is source of truth)</description>
    <label>Location Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>