force-app/main/default/objects/Appointment__c/fields/Location_Zip__c.field-meta.xml
<CustomField>
    <fullName>Location_Zip__c</fullName>
    <label>Location ZIP</label>
    <length>10</length>
    <type>Text</type>
</CustomField>