force-app/main/default/objects/Appointment__c/fields/locationAddress1__c.field-meta.xml
<CustomField>
    <fullName>locationAddress1__c</fullName>
    <label>Location Address 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>