force-app/main/default/objects/Appointment__c/fields/locationAddress2__c.field-meta.xml
<CustomField>
    <fullName>locationAddress2__c</fullName>
    <label>Location Address 2</label>
    <type>TextArea</type>
</CustomField>