force-app/main/default/objects/Appointment__c/fields/locationCity__c.field-meta.xml
<CustomField>
    <fullName>locationCity__c</fullName>
    <label>Location City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>