force-app/main/default/objects/Appointment__c/fields/locationState__c.field-meta.xml
<CustomField>
    <fullName>locationState__c</fullName>
    <label>Location State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>