force-app/main/default/objects/Appointment__c/fields/locationZip__c.field-meta.xml
<CustomField>
    <fullName>locationZip__c</fullName>
    <label>Location Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>