force-app/main/default/objects/Appointment__c/fields/Previous_Appointment__c.field-meta.xml
<CustomField>
    <fullName>Previous_Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Self-lookup — links to the original appointment if this is a rebook/reschedule at a different location.</description>
    <label>Previous Appointment</label>
    <referenceTo>Appointment__c</referenceTo>
    <relationshipLabel>Appointments</relationshipLabel>
    <relationshipName>PreviousAppointments</relationshipName>
    <type>Lookup</type>
</CustomField>