force-app/main/default/objects/Appointment__c/fields/Rebook_Status__c.field-meta.xml
<CustomField>
    <fullName>Rebook_Status__c</fullName>
    <label>Rebook Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Pending Rebook</fullName>
            </value>
            <value>
                <fullName>Rebooked</fullName>
            </value>
            <value>
                <fullName>Declined Rebook</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>