force-app/main/default/objects/Appointment__c/fields/Reminder_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Sent_Date__c</fullName>
    <description>When the reminder was dispatched</description>
    <label>Reminder Sent Date</label>
    <type>DateTime</type>
</CustomField>