force-app/main/default/objects/Appointment__c/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <description>Identifies the API/system that created this record</description>
    <label>Source System</label>
    <length>50</length>
    <type>Text</type>
</CustomField>