force-app/main/default/objects/Appointment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Appointment_Date__c</columns>
    <columns>Lab_Order__c</columns>
    <columns>Status__c</columns>
    <columns>Site_Code__c</columns>
    <columns>Site_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>